--- a/v0.1 YesWiki/src/themes/tools/login/templates/user-signup-form.tpl.html
+++ b/v0.1 YesWiki/src/themes/tools/login/templates/user-signup-form.tpl.html
@@ -6,7 +6,7 @@
       <div class="alert alert-danger"><?php echo $error; ?></div>          
   <?php endif; ?>
 	<div class="control-group form-group">
-		<label class="control-label col-sm-3"><?php echo _t('USER_WIKINAME');?><span class='form-help fa fa-question-circle' title="<?php echo _t('USERNAME_MUST_BE_WIKINAME');?>" onclick="$(this).tooltip('toggle')"></span></label>
+		<label class="control-label col-sm-3"><?php echo _t('USER_WIKINAME');?><span class='form-help fa fa-question-circle' title="<?php echo _t('USERNAME_MUST_BE_WIKINAME');?>" onclick="$(this).tooltip('toggle');$(this).removeAttr('onmouseover');$(this).attr('onclick','$(this).tooltip(\'toggle\');');" onmouseover="$(this).tooltip();$(this).attr('onclick','$(this).tooltip(\'toggle\');');$(this).removeAttr('onmouseover');"></span></label>
 		<div class="controls col-sm-9">
 			<input class="form-control" name="name" size="40" value="<?php echo $name; ?>" />
 		</div>
