--- a/v0.1 YesWiki/src/custom/templates/login/user-signup-form.tpl.html
+++ b/v0.1 YesWiki/src/custom/templates/login/user-signup-form.tpl.html
@@ -38,6 +38,6 @@
 
 <hr>
 
-<button class="btn btn-block btn-default" onclick="$('a[href=\'#LoginModal\']').click()">
+<button class="btn btn-block btn-default" onclick="$('a[href=\'#LoginModal\']:first').click()">
   <?php echo _t('LOGIN_LOGIN'); ?>
 </button>
