feat(ArchiveAction): add zip sql and website

--- a/v0.1 YesWiki/src/custom/templates/custom/archive.twig
+++ b/v0.1 YesWiki/src/custom/templates/custom/archive.twig
@@ -27,13 +27,13 @@
             'options': {
                 'pages' : _t('CUSTOM_ARCHIVE_ACTION_PAGES') ,
                 'forms' : _t('CUSTOM_ARCHIVE_ACTION_FORMS') ,
-                'entries' : _t('CUSTOM_ARCHIVE_ACTION_ENTRIES') 
+                'entries' : _t('CUSTOM_ARCHIVE_ACTION_ENTRIES') ,
+                'sql' : _t('CUSTOM_ARCHIVE_ACTION_SQL') ,
+                'site' : _t('CUSTOM_ARCHIVE_ACTION_SITE'),
+                'custom' : _t('CUSTOM_ARCHIVE_ACTION_CUSTOM'),
+                'filesAndCache' : _t('CUSTOM_ARCHIVE_ACTION_FILES_AND_CACHE')
                 }
             ,'value':(export ?? '')} %}
-                {# ,
-                'sql' : _t('CUSTOM_ARCHIVE_ACTION_SQL'),
-                'filesAndCache' : _t('CUSTOM_ARCHIVE_ACTION_FILES_AND_CACHE') ,
-                'site' : _t('CUSTOM_ARCHIVE_ACTION_SITE')  #}
         <div class="form-actions form-group">
             <div class="col-sm-9 col-sm-offset-3">
                 <button type="submit" class="btn btn-primary">{{ _t('TAGS_DOWNLOAD') }}</button>
